pytest.log
============================= test session starts ==============================
platform darwin -- Python 3.13.5, pytest-8.4.1, pluggy-1.6.0 -- /Users/yordamkocatepe/PycharmProjects/portfolio_exporter/.venv/bin/python
cachedir: .pytest_cache
rootdir: /Users/yordamkocatepe/PycharmProjects/portfolio_exporter
configfile: pyproject.toml
collecting ... collected 74 items / 2 errors

==================================== ERRORS ====================================
__________________ ERROR collecting tests/test_chain_fetch.py __________________
.venv/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_chain_fetch.py:2: in <module>
    from portfolio_exporter.core import chain
portfolio_exporter/core/chain.py:8: in <module>
    from .ib import quote_option, quote_stock
E     File "/Users/yordamkocatepe/PycharmProjects/portfolio_exporter/portfolio_exporter/core/ib.py", line 61
E       ticker = ib.reqMktData(opt, "", snapshot=True)
E   IndentationError: unexpected indent
_____________ ERROR collecting tests/test_quote_option_fallback.py _____________
.venv/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_quote_option_fallback.py:5: in <module>
    from portfolio_exporter.core import ib as core_ib
E     File "/Users/yordamkocatepe/PycharmProjects/portfolio_exporter/portfolio_exporter/core/ib.py", line 61
E       ticker = ib.reqMktData(opt, "", snapshot=True)
E   IndentationError: unexpected indent
=============================== warnings summary ===============================
.venv/lib/python3.13/site-packages/eventkit/util.py:21
  /Users/yordamkocatepe/PycharmProjects/portfolio_exporter/.venv/lib/python3.13/site-packages/eventkit/util.py:21: DeprecationWarning: There is no current event loop
    return asyncio.get_event_loop_policy().get_event_loop()

portfolio_exporter/scripts/historic_prices.py:67
  /Users/yordamkocatepe/PycharmProjects/portfolio_exporter/portfolio_exporter/scripts/historic_prices.py:67: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    DATE_TAG = datetime.utcnow().strftime("%Y%m%d")

portfolio_exporter/scripts/historic_prices.py:68
  /Users/yordamkocatepe/PycharmProjects/portfolio_exporter/portfolio_exporter/scripts/historic_prices.py:68: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    TIME_TAG = datetime.utcnow().strftime("%H%M")

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR tests/test_chain_fetch.py
ERROR tests/test_quote_option_fallback.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!!
======================== 3 warnings, 2 errors in 1.00s =========================
